@@ -1,3 +1,8 @@
+ 2011-10-05 07:10  alexpeshkoff 
+   M src/jrd/LocksCache.h
+   M src/jrd/isc_sync.cpp
+Fixed linux build
+
  2011-09-09 08:55  paul_reeves 
    M builds/install/arch-specific/win32/ba/custom_messages_ba.inc
    M builds/install/arch-specific/win32/de/custom_messages_de.inc
